[package]
name = "btreelist"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "A list data structure that has efficient insertion and removal in the middle."

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"
btree-vec = "0.2.3"
paste = "1.0.7"

[[bench]]
name = "vec"
harness = false
